fixed getEventsUA in EventServiceImpl. Created test