@@ -24,7 +24,7 @@ import java.util.stream.Collectors;
 public class EventServiceImpl implements EventService {
 
     private final EventRepository eventRepository;
-    private   final EventMapper eventMapper;
+    private final EventMapper eventMapper;
 
     @Autowired
     public EventServiceImpl(EventRepository eventRepository, EventMapper eventMapper) {
@@ -57,14 +57,22 @@ public class EventServiceImpl implements EventService {
     }
 
     @Override
-    public List<Event> getEvents() {
+    public List<EventResponseDto> getEventsUA() {
         log.info("EventServiceImpl::getEvents - Fetching all events");
         List<Event> events = eventRepository.findAll();
-//        List<EventResponseDto> eventDTOs = events.stream()
-//                .map(eventMapper::toEventResponseDtoFromEvent)
-//                .collect(Collectors.toList());
-        log.info("EventServiceImpl::getEvents - Found {} events", events.size());
-        return events;
+        try {
+            List<EventResponseDto> eventDTOs = events.stream()
+                .map(eventMapper::toEventResponseDtoFromEvent)
+                .toList();
+
+            log.info("EventServiceImpl::getEvents - Found {} events", events.size());
+            return eventDTOs;
+        }catch (Exception e){
+            log.info("EventServiceImpl::getEvents - Exception  {} events", e.getMessage());
+            throw new GeneralException(e.getMessage(), HttpStatus.BAD_REQUEST);
+         }
+
+
     }
 
     @Override
